# cmdrnafold

./: .gitignore  .pre-commit-config.yaml  README.md  maintainernotes.md  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  check.yml  codeql.yml  version-bump.yml
examples/: cmdrnafold_examples.ipynb
src/cmdrnafold/: RNA.py  __init__.py
tests/: test_command.py  test_linting.py  test_test.py
